--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="okay">Okay</string>
     <string name="cancel">Cancel</string>
     <string name="title_activity_optimized_list">OptimizedList</string>
+    <string name="loading">Loading...</string>
 </resources>
