--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Shopper</string>
-    <string name="budget_prompt">Enter your budget:</string>
+    <string name="app_name">SHOPPER</string>
+    <string name="budget_prompt">Enter your Budget:</string>
     <string name="budget_lbl">Your budget:</string>
     <string name="budget_hint">0.00</string>
     <string name="add_item_prompt">Add Item</string>
