Changed the item name prompt to be an example. Now removes previous entries when the user uses the dialog to enter item details multiple times.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="cancel">Cancel</string>
     <string name="title_activity_optimized_list">OptimizedList</string>
     <string name="loading">Loading...</string>
+    <string name="item_name_example">e.g. Beef</string>
 </resources>
